# process-effects

./: plugin.cabal  stack.yaml
benchmarks/: ConcDb.hs  Parikh.hs  ResLock.hs  Ring.hs  Stutter.hs  mapReduce.hs  pingPong.hs  pingPongMulti.hs  pingPongMultiRev.hs  run_benchmark.sh  workPushing.hs  workStealing.hs
include/Language/Haskell/: MessagePassing.spec
src/: EffectTypes.hs  Lex.x  Parse.y  PostPlugin.hs  PrettyPrint.hs
src/Control/Process/: MessagePassing.hs
src/Control/Process/MessagePassing/: Builtins.hs  EffEnv.hs  EffectTypes.hs  Effects.hs  GHCInterface.hs  Lex.x  Parse.y  PostPlugin.hs  PrettyPrint.hs  Promela.hs  Types.hs
src/Language/Haskell/: MessagePassing.hs
src/Language/Haskell/MessagePassing/: Builtins.hs  EffEnv.hs  EffectTypes.hs  Effects.hs  GHCInterface.hs  Lex.x  Parse.y  PostPlugin.hs  PrettyPrint.hs  Unify.hs
test/model/pos/: ConcDb.hs  FireWall.hs  Parikh.hs  ResLock.hs  ResLockFrag.hs  Ring.hs  Ring00.hs  Stutter.hs  mapReduce.hs  pingMulti.hs  pingPongMulti.hs  pingPongMultiRev.hs  pingPongMultiSpawn.hs  simpleLoop.hs  workPushing.hs  workStealing.hs  workStealingFrag.hs  workStealingFrag2.hs
test/tc/pos/: cases.hs  pingPong.hs  pongLoop.hs  sendloop.hs  simple.hs  simpleLoop.hs  simplecase.hs
