name:                plugin
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/plugin#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files: src/Lex.x
                  , src/Parse.y
cabal-version:       >=1.10

data-files : include/Language/Haskell/*.spec                     

library
  hs-source-dirs:      src
  exposed-modules:     PostPlugin
                     , PrettyPrint
                     , EffectTypes
                     , Lex
                     , Parse
                     , Language.Haskell.MessagePassing
  build-depends:       base >= 4.7 && < 5
                     , liquidhaskell
                     , liquid-fixpoint
                     , mtl
                     , pretty >= 1.1.2
                     , ghc
                     , containers
                     , unordered-containers
                     , array >= 0.5.1
  build-tools:         alex, happy
  default-language:    Haskell2010

-- executable plugin-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , plugin
--   default-language:    Haskell2010

test-suite plugin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plugin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/plugin
